Updated Cloud Command Framework to the 2.0 beta. Updated all cloud commands to take in use the new stuff. Created AdminCommands.java. Recoded ItemLore, KillInfo, NameColour, MineReset, News, RandomGive, Rename & RemoveItalics to cloud commands. Added a check to /xpb all that checks if the player has any experience to bottle. Changed all .get/add/remove(0) to get/add/removeFirst(). Some general code cleanup here and there.