@@ -43,7 +43,7 @@ public class SpongeTask extends TimerTask {
                 @Override
                 public void run() {
                     locs.forEach(loc -> loc.getBlock().setType(Material.AIR));
-                    locs.get(0).getBlock().setType(Material.SPONGE);
+                    locs.getFirst().getBlock().setType(Material.SPONGE);
                 }
             }.runTask(plugin);
         }
